test/errors/value/str/tostr-format2.yasl

echo mt.lookup('', .tostr)('a', 'abc')
